# research-viz-agent

./: .env.example  .gitignore  AGENT_COMMUNICATION_SUMMARY.md  CONTRIBUTING.md  CSV_EXPORT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_OVERVIEW.md  RAG_VISUALIZATION_SUMMARY.md  README.md  RELEASE_NOTES_AGENT_COMM.md  TRACKING_FEATURE_SUMMARY.md  pyproject.toml  requirements.txt  setup.py
docs/: AGENT_COMMUNICATION.md  AGENT_QUICKREF.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  QUICKSTART.md  QUICKSTART_TRACKING.md  RAG_ENCODING_CLUSTERING.md  RAG_TRACKING.md  RAG_VIZ_QUICKREF.md
examples/: agent_client.py  agent_orchestration.py  agent_server.py  csv_export_demo.py  example_usage.py  github_models_demo.py  rag_demo.py  rag_embeddings_demo.py  rag_tracking_demo.py
research_viz_agent/: __init__.py  cli.py
research_viz_agent/agent_protocol/: __init__.py  client.py  schemas.py  server.py
research_viz_agent/agents/: __init__.py  medical_cv_agent.py  research_workflow.py
research_viz_agent/mcp_tools/: __init__.py  arxiv_tool.py  huggingface_tool.py  pubmed_tool.py
research_viz_agent/utils/: csv_export.py  llm_factory.py  rag_store.py  rag_tracker.py
scripts/: check_llm_providers.py  check_openai.py  manage_chromadb.py  research_auto.py  test_serve_command.py  test_tracking.py  verify_agent_protocol.py  visualize_rag_embeddings.py  visualize_rag_tracking.py
tests/: test_agent_protocol.py  test_agent_server.py  test_arxiv_tool.py  test_cli.py  test_cli_extended.py  test_csv_export.py  test_huggingface_tool.py  test_llm_factory.py  test_mcp_tools.py  test_medical_cv_agent.py  test_pubmed_tool.py  test_rag_store.py  test_rag_tracker.py  test_research_workflow.py  test_tools_standalone.py
