[tool.poetry]
name = "research-viz-agent"
version = "0.1.0"
description = "AI agent for summarizing medical computer vision AI models from scientific research"
authors = ["Karl Diedrich, PhD"]
readme = "README.md"
packages = [{include = "research_viz_agent"}]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^1.0.3"
langchain-openai = "^1.0.1"
langchain-community = "^0.4.1"
langgraph = "^1.0.2"
mcp = "^1.19.0"
arxiv = "^2.0.0"
biopython = "^1.83"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.0.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"

[tool.poetry.scripts]
research-viz-agent = "research_viz_agent.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
