[project]
name = "research-viz-agent"
version = "0.1.0"
description = "AI agent for summarizing medical computer vision AI models from scientific research"
authors = [
    {name = "Karl Diedrich, PhD"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.3",
    "langchain-openai>=1.0.1",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.2",
    "mcp>=1.19.0",
    "arxiv>=2.0.0",
    "biopython>=1.83",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "backoff>=2.2.0",
    "chromadb>=0.4.15",
    "langchain-chroma>=0.1.2",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
]

[project.scripts]
research-viz-agent = "research_viz_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=research_viz_agent",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "-v",
]

[tool.coverage.run]
source = ["research_viz_agent"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
